--- a/Travel/assets/css/main.css
+++ b/Travel/assets/css/main.css
@@ -154,22 +154,67 @@ button {
   cursor: pointer;
 }
 
-
-/*
-????
-
-input[type="text"]:invalid,
-input[type="password"]:invalid,
-select:invalid,
-textarea:invalid {
-  box-shadow: none;
-}*/
-
 .signup input[type=text]:focus{
   outline: none;
   border: 2px solid rgba(237, 120, 106, 1);
 }
 .signup input[type=password]:focus{
+  outline: none;
+  border: 2px solid rgba(237, 120, 106, 1);
+}
+
+.login label  {
+  display: inline;
+  width:180px;
+  clear:left;
+  text-align:right;
+  padding-right:10px;
+  color: #191919;
+  font-family: 'Bree Serif', serif;
+
+}
+
+.login input[type=text]{
+  width: 25%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-family: 'Bree Serif', serif;
+
+}
+
+.login input[type=password] {
+  width:25%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-family: 'Bree Serif', serif;
+
+}
+
+
+.login input[type=submit] {
+  width: 30%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.login input[type=text]:focus{
+  outline: none;
+  border: 2px solid rgba(237, 120, 106, 1);
+}
+.login input[type=password]:focus{
   outline: none;
   border: 2px solid rgba(237, 120, 106, 1);
 }
